CSS/styles.css
/* Colour meanings
--colour1 -> menu links
--colour2 -> headings
--colour3 -> border drop caps
--colour4 -> links
--colour5 -> drop caps 
*/

/* Colour variables autumn
:root {
  --colour1: #454140;
  --colour2: #bd5734;
  --colour3: #a79e84;
  --colour4: #7a3b2e;
} */

/* Colour testing
:root {
} */

/* Colour variables dark */
:root {
  --colour1: #0e1a40; 
  --colour2: #946b2d; 
  --colour3: #4e587b; 
  --colour4: #5d5d5d;
  --colour5: #0e1a40; 
}

/* Colour varibles summer
:root {
  --colour1: #A0204C; 
  --colour2: #23103A;
  --colour3: #23103A;
  --colour4: #543864;
} */


/* Dark mode */
@media (prefers-color-scheme: dark) {
  :root {
    --colour1: #c56000;
    --colour2: #ffcc80;
    --colour3: #ffcc80;
    --colour4: #ffc046;
    --colour5: #c56000;

    background: #242424;
    color: #F5F5F5;
  }
  
  body {
    background-color: #242424;
    color: #F5F5F5; 
  }

  blockquote {
    background: #000000;
  }
}

/* Light mode */
@media (prefers-color-scheme: light) {
  body {
    background-color: white;
  }

  blockquote {
    background: #f9f9f9;
  }
}

/* merriweather-regular - latin */
@font-face {
  font-family: 'Merriweather';
  font-style: normal;
  font-weight: 400;
  src: url('fonts/merriweather-v21-latin-regular.eot'); /* IE9 Compat Modes */
  src: local('Merriweather Regular'), local('Merriweather-Regular'),
       url('fonts/merriweather-v21-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('fonts/merriweather-v21-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('fonts/merriweather-v21-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('fonts/merriweather-v21-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('fonts/merriweather-v21-latin-regular.svg#Merriweather') format('svg'); /* Legacy iOS */
  font-display: swap;
}

/* merriweather-italic - latin */
@font-face {
  font-family: 'Merriweather';
  font-style: italic;
  font-weight: 400;
  src: url('fonts/merriweather-v21-latin-italic.eot'); /* IE9 Compat Modes */
  src: local('Merriweather Italic'), local('Merriweather-Italic'),
       url('fonts/merriweather-v21-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('fonts/merriweather-v21-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
       url('fonts/merriweather-v21-latin-italic.woff') format('woff'), /* Modern Browsers */
       url('fonts/merriweather-v21-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
       url('fonts/merriweather-v21-latin-italic.svg#Merriweather') format('svg'); /* Legacy iOS */
  font-display: swap;
}

/* merriweather-sans-regular - latin */
@font-face {
  font-family: 'Merriweather Sans';
  font-style: normal;
  font-weight: 400;
  src: url('fonts/merriweather-sans-v13-latin-regular.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('fonts/merriweather-sans-v13-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('fonts/merriweather-sans-v13-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('fonts/merriweather-sans-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('fonts/merriweather-sans-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('fonts/merriweather-sans-v13-latin-regular.svg#MerriweatherSans') format('svg'); /* Legacy iOS */
  font-display: swap;
}

/* merriweather-sans-italic - latin */
@font-face {
  font-family: 'Merriweather Sans';
  font-style: italic;
  font-weight: 400;
  src: url('fonts/merriweather-sans-v13-latin-italic.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('fonts/merriweather-sans-v13-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('fonts/merriweather-sans-v13-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
       url('fonts/merriweather-sans-v13-latin-italic.woff') format('woff'), /* Modern Browsers */
       url('fonts/merriweather-sans-v13-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
       url('fonts/merriweather-sans-v13-latin-italic.svg#MerriweatherSans') format('svg'); /* Legacy iOS */
  font-display: swap;
}

/* grenze-gotisch-700 - latin-ext_latin */
@font-face {
  font-family: 'Grenze Gotisch';
  font-style: normal;
  font-weight: 700;
  src: local(''),
       url('fonts/grenze-gotisch-v1-latin-ext_latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('fonts/grenze-gotisch-v1-latin-ext_latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  font-display: swap;
}

/* gfs-didot-regular - greek */
@font-face {
  font-family: 'GFS Didot';
  font-style: normal;
  font-weight: 400;
  src: url('../fonts/gfs-didot-v10-greek-regular.eot'); /* IE9 Compat Modes */
  src: local(''),
       url('../fonts/gfs-didot-v10-greek-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../fonts/gfs-didot-v10-greek-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('../fonts/gfs-didot-v10-greek-regular.woff') format('woff'), /* Modern Browsers */
       url('../fonts/gfs-didot-v10-greek-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../fonts/gfs-didot-v10-greek-regular.svg#GFSDidot') format('svg'); /* Legacy iOS */
}
/* ... */

